# eve

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  devbox.json  justfile  rust-toolchain.toml  skills-lock.json  yolo.sh
.agents/skills/arche-architect/: SKILL.md
.agents/skills/arche-discover/: SKILL.md
.agents/skills/arche-ingest/: SKILL.md
.agents/skills/arche-init/: SKILL.md
.arche/: SCHEMA.md  index.md  log.md
.arche/.obsidian/: graph.json  workspace.json
.arche/concepts/: adom-technical-architecture.md  adr-ai-constrained-planner.md  adr-capability-registry.md  adr-device-simulator.md  adr-firmware-rust-embassy.md  adr-message-contract-tsify.md  adr-phased-control-plane.md  adr-reproducible-run-artifacts.md  ai-native-eda.md  ard-mini-molecule-poc.md  automated-remote-bring-up.md  device-farms.md  instrument-control-standards.md  learning-hardware-as-a-software-dev.md  molecules-and-workcells.md  poc-mini-molecule-cloud-workbench.md  programmable-wiring.md  remote-labs-prior-art.md  sad-mini-molecule-poc.md
.arche/discoveries/: poc-unknown-unknowns.md
.arche/entities/: adom-industries.md  john-lauer.md
.arche/queries/: poc-hardware-bom.md
.arche/raw/: adom-decoded-and-poc-plan.md
.arche/sources/: adom-decoded-and-poc-plan.md
.arche/specs/: spec-project-foundation.md
.arche/stories/: poc-explainer-for-self.md  poc-hardware-manual-for-self.md
.claude/: settings.json
.claude/hooks/: load-devbox-env.sh
.claude/skills/: arche-architect  arche-discover  arche-ingest  arche-init  arche-lint  arche-query  arche-specify  arche-tell  devbox-add  devbox-init
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  main.rs  relay.rs
crates/bridge/tests/: relay.rs
crates/contract/: Cargo.toml
crates/contract/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs  main.rs
crates/simulator/tests/: handshake.rs
docs/lessons/: 00-the-big-picture.md  01-the-dev-environment.md  02-the-contract.md  03-the-simulator.md  04-codegen.md  05-the-web-workbench.md  06-the-firmware.md  07-the-spine.md  08-running-everything.md  README.md
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/tools/: uf2_set_family.py
web/src/: App.tsx  contract.gen.ts  protocol.test.ts  protocol.ts  selfId.test.ts  selfId.ts
(+49 files in other folders)
