[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
# rlib for firmware/simulator. cdylib added in Task 4 with codegen feature for wasm-bindgen.
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
serde_json = "1"

[features]
default = []
std = ["serde/std"]
