[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
contract = { path = "../contract", features = ["std"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
